log
Thu 25 Apr 2024 03:40:28 PM UTC: 
 hashmap.c | 23 +++++++++++++++++++----
 1 file changed, 19 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:66:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   66 |     mapa->buckets[i] = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f0e85a9
Thu 25 Apr 2024 03:44:19 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
283d26e
Thu 25 Apr 2024 03:51:07 PM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
6693da8
Thu 25 Apr 2024 03:59:11 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
8a95d05
Thu 25 Apr 2024 04:02:18 PM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
   92 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ed37d19
Thu 25 Apr 2024 04:02:37 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8ff2144
Thu 25 Apr 2024 04:04:26 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|5
total_score: 20/70
fec6155
Thu 25 Apr 2024 04:04:58 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
8fad3eb
Thu 25 Apr 2024 04:05:33 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|5
total_score: 20/70
c2f82e3
Thu 25 Apr 2024 04:07:50 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|5
total_score: 20/70
9583e45
Thu 25 Apr 2024 04:11:14 PM UTC: 
 hashmap.c | 15 ++-------------
 1 file changed, 2 insertions(+), 13 deletions(-)
 tests:  5|5
total_score: 20/70
b7a33f4
Thu 25 Apr 2024 04:13:02 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 30/70
cf03730
Thu 25 Apr 2024 08:27:10 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 30/70
7a0e6e7
